@@ -14,7 +14,7 @@ build_requires:
   WWW::OpenResty: 0.09
 distribution_type: module
 generated_by: 'Module::Install version 0.77'
-license: GPLv2
+license: BSD
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
@@ -75,4 +75,4 @@ requires:
   Time::HiRes: 0
   YAML::Syck: 1.04
   perl: 5.6.1
-version: 0.5.2
+version: 0.5.3
